i40e: fix nvm version and remove firmware report (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15513,6 +15513,7 @@
 	patches.drivers/i40e-0220-i40e-count-timeout-events.patch
 	patches.drivers/i40e-0221-i40e-Remove-a-redundant-filter-addition.patch
 	patches.drivers/i40e-0222-i40e-Fix-static-checker-warning.patch
+	patches.drivers/i40e-0223-i40e-fix-nvm-version-and-remove-firmware-report.patch
 
 	########################################################
 	# Wireless Networking
