i40e: Delete stale MAC filters after change (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15646,6 +15646,7 @@
 	patches.drivers/i40e-0353-i40e-keep-SR-IOV-enabled-in-the-case-that-RSS-VMDQ-F.patch
 	patches.drivers/i40e-0354-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
 	patches.drivers/i40e-0355-i40e-Do-not-fall-back-to-one-queue-model-if-the-only.patch
+	patches.drivers/i40e-0356-i40e-Delete-stale-MAC-filters-after-change.patch
 
 	########################################################
 	# Wireless Networking
