--- a/series.conf
+++ b/series.conf
@@ -15699,6 +15699,7 @@
 	patches.drivers/i40e-0406-i40e-i40evf-add-ASQ-write-back-timeout-variable-to-A.patch
 	patches.drivers/i40e-0407-i40e-FD-filter-replay-logic-bug-fix.patch
 	patches.drivers/i40e-0408-i40e-i40evf-initialize-context-descriptor.patch
+	patches.drivers/i40e-0409-i40e-limit-GLLAN_TXPRE_QDIS-to-QINDX-0-127.patch
 
 	########################################################
 	# Wireless Networking
