i40e: use stored base_queue value (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15657,6 +15657,7 @@
 	patches.drivers/i40e-0364-i40e-i40evf-remove-FTYPE.patch
 	patches.drivers/i40e-0365-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
 	patches.drivers/i40e-0366-i40e-Fix-a-bug-in-ethtool-for-FD-drop-packet-filter-.patch
+	patches.drivers/i40e-0367-i40e-use-stored-base_queue-value.patch
 
 	########################################################
 	# Wireless Networking
