i40e: fix error handling when alloc of vsi array fails (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15411,6 +15411,7 @@
 	patches.drivers/i40e-0118-i40e-add-header-file-flag-_I40E_TXRX_H_.patch
 	patches.drivers/i40e-0119-i40e-use-functions-to-enable-and-disable-icr-0.patch
 	patches.drivers/i40e-0120-i40e-reinit-buffer-size-each-time.patch
+	patches.drivers/i40e-0121-i40e-fix-error-handling-when-alloc-of-vsi-array-fail.patch
 
 	########################################################
 	# Wireless Networking
