i40e: remove dead code (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15496,6 +15496,7 @@
 	patches.drivers/i40e-0203-i40e-Add-missing-braces-to-i40e_dcb_need_reconfig.patch
 	patches.drivers/i40e-0204-i40evf-clean-up-memsets.patch
 	patches.drivers/i40e-0205-i40e-Setting-i40e_down-bit-for-tx_timeout.patch
+	patches.drivers/i40e-0206-i40e-remove-dead-code.patch
 
 	########################################################
 	# Wireless Networking
