--- a/series.conf
+++ b/series.conf
@@ -15454,6 +15454,7 @@
 	patches.drivers/i40e-0161-i40e-disable-packet-split.patch
 	patches.drivers/i40e-0162-i40e-Cleanup-reconfig-rss-path.patch
 	patches.drivers/i40e-0163-i40e-release-NVM-resource-reservation-on-startup.patch
+	patches.drivers/i40e-0164-i40e-remove-interrupt-on-AQ-error.patch
 
 	########################################################
 	# Wireless Networking
