i40e: Allow RSS table entry range and GPS to be any number, not necessarily power of 2 (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15647,6 +15647,7 @@
 	patches.drivers/i40e-0354-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
 	patches.drivers/i40e-0355-i40e-Do-not-fall-back-to-one-queue-model-if-the-only.patch
 	patches.drivers/i40e-0356-i40e-Delete-stale-MAC-filters-after-change.patch
+	patches.drivers/i40e-0357-i40e-Allow-RSS-table-entry-range-and-GPS-to-be-any-n.patch
 
 	########################################################
 	# Wireless Networking
