i40e: Reduce range of interrupt reg in reg test (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15438,6 +15438,7 @@
 	patches.drivers/i40e-0145-i40e-Allow-VF-to-set-already-assigned-MAC-address.patch
 	patches.drivers/i40e-0146-i40e-Add-code-to-wait-for-FW-to-complete-in-reset-pa.patch
 	patches.drivers/i40e-0147-i40e-update-firmware-api-to-1.1.patch
+	patches.drivers/i40e-0148-i40e-Reduce-range-of-interrupt-reg-in-reg-test.patch
 
 	########################################################
 	# Wireless Networking
