i40e: trivial: formatting and checkpatch fixes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15457,6 +15457,7 @@
 	patches.drivers/i40e-0164-i40e-remove-interrupt-on-AQ-error.patch
 	patches.drivers/i40e-0165-i40e-accept-pf-to-pf-adminq-messages.patch
 	patches.drivers/i40e-0166-i40e-shorten-wordy-fields.patch
+	patches.drivers/i40e-0167-i40e-trivial-formatting-and-checkpatch-fixes.patch
 
 	########################################################
 	# Wireless Networking
