--- a/series.conf
+++ b/series.conf
@@ -15299,6 +15299,7 @@
 	patches.drivers/i40e-0006-i40e-init-code-and-hardware-support.patch
 	patches.drivers/i40e-0007-i40e-debugfs-interface.patch
 	patches.drivers/i40e-0008-i40e-include-i40e-in-kernel-proper.patch
+	patches.fixes/list-introduce-list_first_entry_or_null.patch
 
 	########################################################
 	# Wireless Networking
