i40e: Tell OS link is going down when calling set_phy_config (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15757,6 +15757,7 @@
 	patches.drivers/i40e-0464-i40e-Allow-user-to-change-link-settings-if-link-is-d.patch
 	patches.drivers/i40e-0465-i40e-Change-wording-to-be-more-consistent.patch
 	patches.drivers/i40e-0466-i40e-Remove-unnecessary-assignment.patch
+	patches.drivers/i40e-0467-i40e-Tell-OS-link-is-going-down-when-calling-set_phy.patch
 
 	########################################################
 	# Wireless Networking
