--- a/series.conf
+++ b/series.conf
@@ -15653,6 +15653,7 @@
 	patches.drivers/i40e-0360-i40e-Change-the-notion-of-src-and-dst-for-FD_SB-in-e.patch
 	patches.drivers/i40e-0361-i40e-Separate-out-DCB-capability-and-enabled-flags.patch
 	patches.drivers/i40e-0362-i40e-Do-not-accept-tagged-packets-by-default.patch
+	patches.drivers/i40e-0363-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
 
 	########################################################
 	# Wireless Networking
