i40e: using for_each_set_bit to simplify the code (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15385,6 +15385,7 @@
 	patches.drivers/i40e-0092-i40e-Fix-wrong-mask-bits-being-used-in-misc-interrup.patch
 	patches.drivers/i40e-0093-i40e-Fix-off-by-one-in-i40e_dbg_command_write.patch
 	patches.drivers/i40e-0094-i40e-make-functions-static-and-remove-dead-code.patch
+	patches.drivers/i40e-0095-i40e-using-for_each_set_bit-to-simplify-the-code.patch
 
 	########################################################
 	# Wireless Networking
