i40e: Do not enable NTUPLE feature control in MFP mode (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15579,6 +15579,7 @@
 	patches.drivers/i40e-0286-i40e-Redistribute-queue-vectors-after-DCB-reconfigur.patch
 	patches.drivers/i40e-0287-i40e-Don-t-stop-driver-probe-when-querying-DCB-confi.patch
 	patches.drivers/i40e-0288-i40e-Change-variable-type-to-avoid-typecheck-failure.patch
+	patches.drivers/i40e-0289-i40e-Do-not-enable-NTUPLE-feature-control-in-MFP-mod.patch
 
 	########################################################
 	# Wireless Networking
