i40e: sync header files with hardware (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15347,6 +15347,7 @@
 	patches.drivers/i40e-0054-i40e-add-interrupt-test.patch
 	patches.drivers/i40e-0055-i40e-add-support-for-triggering-EMPR.patch
 	patches.drivers/i40e-0056-i40e-restrict-diag-test-length.patch
+	patches.drivers/i40e-0057-i40e-sync-header-files-with-hardware.patch
 
 	########################################################
 	# Wireless Networking
