i40e: Cleanup in FDIR SB ethtool code (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15543,6 +15543,7 @@
 	patches.drivers/i40e-0250-i40e-Delete-ATR-filter-on-RST.patch
 	patches.drivers/i40e-0251-i40e-Make-the-alloc-and-free-queue-vector-calls-orth.patch
 	patches.drivers/i40e-0252-i40e-eeprom-integrity-check-on-load-and-empr.patch
+	patches.drivers/i40e-0253-i40e-Cleanup-in-FDIR-SB-ethtool-code.patch
 
 	########################################################
 	# Wireless Networking
