--- a/series.conf
+++ b/series.conf
@@ -15312,6 +15312,7 @@
 	patches.drivers/i40e-0019-i40e-Do-not-directly-increment-Tx-next_to_use.patch
 	patches.drivers/i40e-0020-i40e-clean-up-Tx-fast-path.patch
 	patches.drivers/i40e-0021-i40e-Drop-dead-code-and-flags-from-Tx-hotpath.patch
+	patches.drivers/i40e-0022-i40e-Add-support-for-Tx-byte-queue-limits.patch
 
 	########################################################
 	# Wireless Networking
