--- a/series.conf
+++ b/series.conf
@@ -15327,6 +15327,7 @@
 	patches.drivers/i40e-0034-i40e-fix-use-of-untrusted-scalar-value-warning.patch
 	patches.drivers/i40e-0035-i40e-fix-sign-extension-issue.patch
 	patches.drivers/i40e-0036-i40e-refactor-fdir-setup-function.patch
+	patches.drivers/i40e-0037-i40e-tweaking-icr0-handling-for-legacy-irq.patch
 
 	########################################################
 	# Wireless Networking
