--- a/series.conf
+++ b/series.conf
@@ -15344,6 +15344,7 @@
 	patches.drivers/i40e-0051-i40e-properly-add-VF-MAC-addresses.patch
 	patches.drivers/i40e-0052-i40e-fix-debugging-messages.patch
 	patches.drivers/i40e-0053-i40e-default-debug-mask-setting.patch
+	patches.drivers/i40e-0054-i40e-add-interrupt-test.patch
 
 	########################################################
 	# Wireless Networking
