i40e: make a define from a large constant (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15400,6 +15400,7 @@
 	patches.drivers/i40e-0107-i40e-remove-chatty-log-messages.patch
 	patches.drivers/i40e-0108-i40e-fix-error-return.patch
 	patches.drivers/i40e-0109-i40e-be-more-informative.patch
+	patches.drivers/i40e-0110-i40e-make-a-define-from-a-large-constant.patch
 
 	########################################################
 	# Wireless Networking
