--- a/series.conf
+++ b/series.conf
@@ -15561,6 +15561,7 @@
 	patches.drivers/i40e-0268-i40e-Reset-the-VF-upon-conflicting-VLAN-configuratio.patch
 	patches.drivers/i40e-0269-i40e-Enable-VF-Tx-bandwidth-setting.patch
 	patches.drivers/i40e-0270-i40e-Remove-a-FW-workaround.patch
+	patches.drivers/i40e-0271-i40e-Fix-an-issue-with-displaying-IPv4-FD-filters.patch
 
 	########################################################
 	# Wireless Networking
