i40e: check desc pointer before printing (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15482,6 +15482,7 @@
 	patches.drivers/i40e-0189-i40e-Warn-admin-to-reload-VF-driver-on-port-VLAN-con.patch
 	patches.drivers/i40e-0190-i40e-Retain-MAC-filters-on-port-VLAN-deletion.patch
 	patches.drivers/i40e-0191-drivers-net-delete-non-required-instances-of-include.patch
+	patches.drivers/i40e-0192-i40e-check-desc-pointer-before-printing.patch
 
 	########################################################
 	# Wireless Networking
