--- a/series.conf
+++ b/series.conf
@@ -15547,6 +15547,7 @@
 	patches.drivers/i40e-0254-i40e-Add-functionality-for-FD-SB-to-drop-packets.patch
 	patches.drivers/i40e-0255-i40e-check-for-netdev-before-debugfs-use.patch
 	patches.drivers/i40e-0256-i40e-i40evf-Add-an-FD-message-level.patch
+	patches.drivers/i40e-0257-i40e-Use-DEBUG_FD-message-level-for-an-FD-message.patch
 
 	########################################################
 	# Wireless Networking
