--- a/series.conf
+++ b/series.conf
@@ -15365,6 +15365,7 @@
 	patches.drivers/i40e-0072-i40e-complain-about-out-of-range-descriptor-request.patch
 	patches.drivers/i40e-0073-i40e-remove-and-fix-confusing-define-name.patch
 	patches.drivers/i40e-0074-i40e-fix-null-dereference.patch
+	patches.drivers/i40e-0075-i40e-fix-up-some-of-the-ethtool-connection-reporting.patch
 
 	########################################################
 	# Wireless Networking
