i40e: implement DCB support infastructure (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15489,6 +15489,7 @@
 	patches.drivers/i40e-0196-i40e-whitespace-fixes.patch
 	patches.drivers/i40e-0197-i40e-rename-defines.patch
 	patches.drivers/i40e-0198-i40e-refactor-flow-director.patch
+	patches.drivers/i40e-0199-i40e-implement-DCB-support-infastructure.patch
 
 	########################################################
 	# Wireless Networking
