i40e: Fix TSO and hw checksums for non-accelerated vlan packets (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15741,6 +15741,7 @@
 	patches.drivers/i40e-0448-i40e-Fix-for-recent-kernel-panic.patch
 	patches.drivers/i40e-0449-i40e-Fix-a-few-potential-VF-dereferences.patch
 	patches.drivers/i40e-0450-i40e-fix-PTP-bug.patch
+	patches.drivers/i40e-0451-i40e-Fix-TSO-and-hw-checksums-for-non-accelerated-vl.patch
 
 	########################################################
 	# Wireless Networking
