i40e: set lan_veb index (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15616,6 +15616,7 @@
 	patches.drivers/i40e-0323-i40e-refactor-stats-collection.patch
 	patches.drivers/i40e-0324-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
 	patches.drivers/i40e-0325-i40e-add-missing-VSI-statistics.patch
+	patches.drivers/i40e-0326-i40e-set-lan_veb-index.patch
 
 	########################################################
 	# Wireless Networking
