i40e: Fix wrong mask bits being used in misc interrupt (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15382,6 +15382,7 @@
 	patches.drivers/i40e-0089-i40e-simplify-error-messages-for-dump-descriptor.patch
 	patches.drivers/i40e-0090-i40e-fix-up-scanf-decoders.patch
 	patches.drivers/i40e-0091-i40e-more-print_hex_dump-use.patch
+	patches.drivers/i40e-0092-i40e-Fix-wrong-mask-bits-being-used-in-misc-interrup.patch
 
 	########################################################
 	# Wireless Networking
