--- a/series.conf
+++ b/series.conf
@@ -15710,6 +15710,7 @@
 	patches.drivers/i40e-0417-i40e-move-nway-reset.patch
 	patches.drivers/i40e-0418-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
 	patches.drivers/i40e-0419-i40e-Add-set_pauseparam-to-ethtool.patch
+	patches.drivers/i40e-0420-i40e-Implement-set_settings-for-ethtool.patch
 
 	########################################################
 	# Wireless Networking
