i40e: Add bridge FDB add/del/dump ops (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15555,6 +15555,7 @@
 	patches.drivers/i40e-0262-i40e-remove-open-coded-skb_cow_head.patch
 	patches.drivers/i40e-0263-i40e-fix-TCP-flag-replication-for-hardware-offload.patch
 	patches.drivers/i40e-0264-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
+	patches.drivers/i40e-0265-i40e-Add-bridge-FDB-add-del-dump-ops.patch
 
 	########################################################
 	# Wireless Networking
