--- a/series.conf
+++ b/series.conf
@@ -15659,6 +15659,7 @@
 	patches.drivers/i40e-0366-i40e-Fix-a-bug-in-ethtool-for-FD-drop-packet-filter-.patch
 	patches.drivers/i40e-0367-i40e-use-stored-base_queue-value.patch
 	patches.drivers/i40e-0368-i40e-i40evf-i40e_register.h-update.patch
+	patches.drivers/i40e-0369-i40e-workaround-NVM-GLQF_HKEY.patch
 
 	########################################################
 	# Wireless Networking
