--- a/series.conf
+++ b/series.conf
@@ -15578,6 +15578,7 @@
 	patches.drivers/i40e-0285-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
 	patches.drivers/i40e-0286-i40e-Redistribute-queue-vectors-after-DCB-reconfigur.patch
 	patches.drivers/i40e-0287-i40e-Don-t-stop-driver-probe-when-querying-DCB-confi.patch
+	patches.drivers/i40e-0288-i40e-Change-variable-type-to-avoid-typecheck-failure.patch
 
 	########################################################
 	# Wireless Networking
