i40e: get media type during link info (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15350,6 +15350,7 @@
 	patches.drivers/i40e-0057-i40e-sync-header-files-with-hardware.patch
 	patches.drivers/i40e-0058-i40e-separate-TSYNVALID-and-TSYNINDX-fields-in-Rx-de.patch
 	patches.drivers/i40e-0059-i40e-check-multi-bit-state-correctly.patch
+	patches.drivers/i40e-0060-i40e-get-media-type-during-link-info.patch
 
 	########################################################
 	# Wireless Networking
