--- a/series.conf
+++ b/series.conf
@@ -15461,6 +15461,7 @@
 	patches.drivers/i40e-0168-i40e-Add-a-dummy-packet-template.patch
 	patches.drivers/i40e-0169-i40e-Turn-flow-director-off-in-MFP-mode.patch
 	patches.drivers/i40e-0170-i40e-use-assignment-instead-of-memcpy.patch
+	patches.drivers/i40e-0171-i40e-drop-unused-macros.patch
 
 	########################################################
 	# Wireless Networking
