i40e: Add a dummy packet template (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15458,6 +15458,7 @@
 	patches.drivers/i40e-0165-i40e-accept-pf-to-pf-adminq-messages.patch
 	patches.drivers/i40e-0166-i40e-shorten-wordy-fields.patch
 	patches.drivers/i40e-0167-i40e-trivial-formatting-and-checkpatch-fixes.patch
+	patches.drivers/i40e-0168-i40e-Add-a-dummy-packet-template.patch
 
 	########################################################
 	# Wireless Networking
