i40e: print full link message (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15624,6 +15624,7 @@
 	patches.drivers/i40e-0331-i40e-increase-reset-wait-time.patch
 	patches.drivers/i40e-0332-i40e-add-vsi-x-cast-stats.patch
 	patches.drivers/i40e-0333-i40e-add-xcast-stats-for-port.patch
+	patches.drivers/i40e-0334-i40e-print-full-link-message.patch
 
 	########################################################
 	# Wireless Networking
