--- a/series.conf
+++ b/series.conf
@@ -15580,6 +15580,7 @@
 	patches.drivers/i40e-0287-i40e-Don-t-stop-driver-probe-when-querying-DCB-confi.patch
 	patches.drivers/i40e-0288-i40e-Change-variable-type-to-avoid-typecheck-failure.patch
 	patches.drivers/i40e-0289-i40e-Do-not-enable-NTUPLE-feature-control-in-MFP-mod.patch
+	patches.drivers/i40e-0290-i40e-Do-not-expose-fd-sb-commands-from-debugfs.patch
 
 	########################################################
 	# Wireless Networking
