--- a/series.conf
+++ b/series.conf
@@ -15622,6 +15622,7 @@
 	patches.drivers/i40e-0329-i40e-i40evf-check-AQ-register-for-valid-data.patch
 	patches.drivers/i40e-0330-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
 	patches.drivers/i40e-0331-i40e-increase-reset-wait-time.patch
+	patches.drivers/i40e-0332-i40e-add-vsi-x-cast-stats.patch
 
 	########################################################
 	# Wireless Networking
