i40e: clear pxe after adminq is rebuilt (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15631,6 +15631,7 @@
 	patches.drivers/i40e-0338-i40e-i40evf-Fix-code-to-accommodate-i40e_register.h-.patch
 	patches.drivers/i40e-0339-i40e-i40evf-Clean-up-a-few-things.patch
 	patches.drivers/i40e-0340-i40e-Fix-incorrect-feature-configuration-status.patch
+	patches.drivers/i40e-0341-i40e-clear-pxe-after-adminq-is-rebuilt.patch
 
 	########################################################
 	# Wireless Networking
