--- a/series.conf
+++ b/series.conf
@@ -15597,6 +15597,7 @@
 	patches.drivers/i40e-0304-i40e-enable-descriptor-prefetch-for-VFs.patch
 	patches.drivers/i40e-0305-i40e-Tx-Rx-rings-declaration.patch
 	patches.drivers/i40e-0306-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
+	patches.drivers/i40e-0307-i40e-Report-cmd-data-in-ETHTOOL_GRXCLSRLCNT-instead-.patch
 
 	########################################################
 	# Wireless Networking
