i40e/i40evf: remove unused RX_LRO define (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15608,6 +15608,7 @@
 	patches.drivers/i40e-0315-i40e-don-t-use-OR-to-check-a-value.patch
 	patches.drivers/i40e-0316-i40e-Rework-register-diagnostic.patch
 	patches.drivers/i40e-0317-i40e-remove-check-for-large-buffer.patch
+	patches.drivers/i40e-0318-i40e-i40evf-remove-unused-RX_LRO-define.patch
 
 	########################################################
 	# Wireless Networking
