i40e: check vsi ptrs before dumping them (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15329,6 +15329,7 @@
 	patches.drivers/i40e-0036-i40e-refactor-fdir-setup-function.patch
 	patches.drivers/i40e-0037-i40e-tweaking-icr0-handling-for-legacy-irq.patch
 	patches.drivers/i40e-0038-i40e-reorder-block-declarations-in-debugfs.patch
+	patches.drivers/i40e-0039-i40e-check-vsi-ptrs-before-dumping-them.patch
 
 	########################################################
 	# Wireless Networking
