--- a/series.conf
+++ b/series.conf
@@ -15551,6 +15551,7 @@
 	patches.drivers/i40e-0258-i40e-fix-function-kernel-doc-description.patch
 	patches.drivers/i40e-0259-i40e-i40evf-fix-error-checking-path.patch
 	patches.drivers/i40e-0260-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
+	patches.drivers/i40e-0261-i40e-Remove-casts-of-pointer-to-same-type.patch
 
 	########################################################
 	# Wireless Networking
