--- a/series.conf
+++ b/series.conf
@@ -15729,6 +15729,7 @@
 	patches.drivers/i40e-0436-i40e-Adds-FCoE-related-code-to-i40e-core-driver.patch
 	patches.drivers/i40e-0437-i40e-adds-FCoE-to-build-and-updates-its-documentatio.patch
 	patches.drivers/i40e-0438-i40e-expose-debug_write_register-request.patch
+	patches.drivers/i40e-0439-i40e-use-correct-vf_id-offset-for-virtchnl-message.patch
 
 	########################################################
 	# Wireless Networking
