i40e: Use port VLAN in MAC/VLAN filter configuration (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15574,6 +15574,7 @@
 	patches.drivers/i40e-0281-i40e-fix-Timesync-Tx-interrupt-handler-code.patch
 	patches.drivers/i40e-0282-i40e-remove-ptp_tx_work-timestamp-work-item.patch
 	patches.drivers/i40e-0283-i40e-Retain-MAC-filters-when-changing-port-VLAN.patch
+	patches.drivers/i40e-0284-i40e-Use-port-VLAN-in-MAC-VLAN-filter-configuration.patch
 
 	########################################################
 	# Wireless Networking
