i40e: firmware version fields offsets update (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15337,6 +15337,7 @@
 	patches.drivers/i40e-0044-i40e-register-file-updates.patch
 	patches.drivers/i40e-0045-i40e-clear-AQ-head-and-tail-registers.patch
 	patches.drivers/i40e-0046-i40e-simplify-aq-head-tail-len-setups.patch
+	patches.drivers/i40e-0047-i40e-firmware-version-fields-offsets-update.patch
 
 	########################################################
 	# Wireless Networking
