i40e: enable early hardware support (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15352,6 +15352,7 @@
 	patches.drivers/i40e-0059-i40e-check-multi-bit-state-correctly.patch
 	patches.drivers/i40e-0060-i40e-get-media-type-during-link-info.patch
 	patches.drivers/i40e-0061-i40e-Add-flag-for-L2-VEB-filtering.patch
+	patches.drivers/i40e-0062-i40e-enable-early-hardware-support.patch
 
 	########################################################
 	# Wireless Networking
