i40e: Use the new i40e_get_fd_cnt_all function in other places (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15598,6 +15598,7 @@
 	patches.drivers/i40e-0305-i40e-Tx-Rx-rings-declaration.patch
 	patches.drivers/i40e-0306-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
 	patches.drivers/i40e-0307-i40e-Report-cmd-data-in-ETHTOOL_GRXCLSRLCNT-instead-.patch
+	patches.drivers/i40e-0308-i40e-Use-the-new-i40e_get_fd_cnt_all-function-in-oth.patch
 
 	########################################################
 	# Wireless Networking
