i40e: Minor comment changes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15731,6 +15731,7 @@
 	patches.drivers/i40e-0438-i40e-expose-debug_write_register-request.patch
 	patches.drivers/i40e-0439-i40e-use-correct-vf_id-offset-for-virtchnl-message.patch
 	patches.drivers/i40e-0440-i40e-disable-local-loopback-on-vmdq-vsi.patch
+	patches.drivers/i40e-0441-i40e-Minor-comment-changes.patch
 
 	########################################################
 	# Wireless Networking
