--- a/series.conf
+++ b/series.conf
@@ -15302,6 +15302,7 @@
 	patches.fixes/list-introduce-list_first_entry_or_null.patch
 	patches.fixes/net-Add-support-for-hardware-offloaded-encapsulation.patch
 	patches.drivers/i40e-0011-i40e-use-common-failure-flow.patch
+	patches.drivers/i40e-0012-i40e-small-clean-ups-from-review.patch
 
 	########################################################
 	# Wireless Networking
