i40e: Redistribute queue vectors after DCB reconfiguration (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15576,6 +15576,7 @@
 	patches.drivers/i40e-0283-i40e-Retain-MAC-filters-when-changing-port-VLAN.patch
 	patches.drivers/i40e-0284-i40e-Use-port-VLAN-in-MAC-VLAN-filter-configuration.patch
 	patches.drivers/i40e-0285-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
+	patches.drivers/i40e-0286-i40e-Redistribute-queue-vectors-after-DCB-reconfigur.patch
 
 	########################################################
 	# Wireless Networking
