i40e: add VEB stats to ethtool (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15617,6 +15617,7 @@
 	patches.drivers/i40e-0324-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
 	patches.drivers/i40e-0325-i40e-add-missing-VSI-statistics.patch
 	patches.drivers/i40e-0326-i40e-set-lan_veb-index.patch
+	patches.drivers/i40e-0327-i40e-add-VEB-stats-to-ethtool.patch
 
 	########################################################
 	# Wireless Networking
