i40e/i40evf: remove FTYPE (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15654,6 +15654,7 @@
 	patches.drivers/i40e-0361-i40e-Separate-out-DCB-capability-and-enabled-flags.patch
 	patches.drivers/i40e-0362-i40e-Do-not-accept-tagged-packets-by-default.patch
 	patches.drivers/i40e-0363-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
+	patches.drivers/i40e-0364-i40e-i40evf-remove-FTYPE.patch
 
 	########################################################
 	# Wireless Networking
