--- a/series.conf
+++ b/series.conf
@@ -15637,6 +15637,7 @@
 	patches.drivers/i40e-0344-i40e-i40evf-fix-TSO-accounting.patch
 	patches.drivers/i40e-0345-i40e-i40evf-fix-poll-weight.patch
 	patches.drivers/i40e-0346-i40e-i40evf-remove-deprecated-device-IDs.patch
+	patches.drivers/i40e-0347-i40e-add-checks-for-AQ-error-status-bits.patch
 
 	########################################################
 	# Wireless Networking
