--- a/series.conf
+++ b/series.conf
@@ -15583,6 +15583,7 @@
 	patches.drivers/i40e-0290-i40e-Do-not-expose-fd-sb-commands-from-debugfs.patch
 	patches.drivers/i40e-0291-i40e-Update-function-formal-parameters.patch
 	patches.drivers/i40e-0292-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
+	patches.drivers/i40e-0293-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
