i40e: Drop unused completed stat (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15307,6 +15307,7 @@
 	patches.drivers/i40e-0014-i40e-better-return-values.patch
 	patches.drivers/i40e-0015-i40e-clean-up-coccicheck-reported-errors.patch
 	patches.drivers/i40e-0016-i40e-Link-code-updates.patch
+	patches.drivers/i40e-0017-i40e-Drop-unused-completed-stat.patch
 
 	########################################################
 	# Wireless Networking
