--- a/series.conf
+++ b/series.conf
@@ -15588,6 +15588,7 @@
 	patches.drivers/i40e-0295-i40e-i40evf-set-proper-default-for-ITR-registers.patch
 	patches.drivers/i40e-0296-i40e-i40evf-control-auto-ITR-through-ethtool.patch
 	patches.drivers/i40e-0297-i40e-remove-hardcode-of-stats-struct-size-in-ethtool.patch
+	patches.drivers/i40e-0298-i40e-Don-t-disable-SR-IOV-when-VFs-are-assigned.patch
 
 	########################################################
 	# Wireless Networking
