i40e: Do not enable default port on the VEB (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15421,6 +15421,7 @@
 	patches.drivers/i40e-0128-i40e-Record-dma-buffer-info-for-dummy-packets.patch
 	patches.drivers/i40e-0129-i40e-Fix-SR-IOV-VF-port-VLAN.patch
 	patches.drivers/i40e-0130-i40e-avoid-unnecessary-register-read.patch
+	patches.drivers/i40e-0131-i40e-Do-not-enable-default-port-on-the-VEB.patch
 
 	########################################################
 	# Wireless Networking
