--- a/series.conf
+++ b/series.conf
@@ -15293,6 +15293,7 @@
 	# i40e SP4 update (bsc#909484 FATE#317397)
 	patches.drivers/i40e-0001-i40e-main-driver-core.patch
 	patches.drivers/i40e-0002-i40e-transmit-receive-and-NAPI.patch
+	patches.drivers/i40e-0003-i40e-driver-ethtool-core.patch
 
 	########################################################
 	# Wireless Networking
