--- a/series.conf
+++ b/series.conf
@@ -15392,6 +15392,7 @@
 	patches.drivers/i40e-0099-i40e-add-wake-on-lan-support.patch
 	patches.drivers/i40e-0100-i40e-fix-curly-brace-use-and-return-type.patch
 	patches.drivers/i40e-0101-i40e-Implementation-of-VXLAN-ndo-s.patch
+	patches.fixes/net-add-802.1ad-802.1ah-QinQ-ethertypes.patch
 
 	########################################################
 	# Wireless Networking
