i40e: always print aqtx answer (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15724,6 +15724,7 @@
 	patches.drivers/i40e-0431-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
 	patches.drivers/i40e-0432-i40e-Fix-firmware-API-version-errors.patch
 	patches.drivers/i40e-0433-i40e-Give-link-more-time-after-setting-flow-control.patch
+	patches.drivers/i40e-0434-i40e-always-print-aqtx-answer.patch
 
 	########################################################
 	# Wireless Networking
