--- a/series.conf
+++ b/series.conf
@@ -15549,6 +15549,7 @@
 	patches.drivers/i40e-0256-i40e-i40evf-Add-an-FD-message-level.patch
 	patches.drivers/i40e-0257-i40e-Use-DEBUG_FD-message-level-for-an-FD-message.patch
 	patches.drivers/i40e-0258-i40e-fix-function-kernel-doc-description.patch
+	patches.drivers/i40e-0259-i40e-i40evf-fix-error-checking-path.patch
 
 	########################################################
 	# Wireless Networking
