--- a/series.conf
+++ b/series.conf
@@ -15642,6 +15642,7 @@
 	patches.drivers/i40e-0349-i40e-remove-unused-variable-and-memory-allocation.patch
 	patches.drivers/i40e-0350-i40e-don-t-complain-about-removing-non-existent-addr.patch
 	patches.drivers/i40e-0351-i40e-implement-anti-spoofing-for-VFs.patch
+	patches.drivers/i40e-0352-i40e-Changes-to-Interrupt-distribution-policy.patch
 
 	########################################################
 	# Wireless Networking
