--- a/series.conf
+++ b/series.conf
@@ -15310,6 +15310,7 @@
 	patches.drivers/i40e-0017-i40e-Drop-unused-completed-stat.patch
 	patches.drivers/i40e-0018-i40e-Cleanup-Tx-buffer-info-layout.patch
 	patches.drivers/i40e-0019-i40e-Do-not-directly-increment-Tx-next_to_use.patch
+	patches.drivers/i40e-0020-i40e-clean-up-Tx-fast-path.patch
 
 	########################################################
 	# Wireless Networking
