i40evf: set flags before sending message (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15883,6 +15883,7 @@
 	patches.drivers/i40evf-0114-i40evf-resend-FW-request-if-no-response.patch
 	patches.drivers/i40evf-0115-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
 	patches.drivers/i40evf-0116-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
+	patches.drivers/i40evf-0117-i40evf-set-flags-before-sending-message.patch
 
 	########################################################
 	# Wireless Networking
