i40e/i40evf: initialize context descriptor (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15885,6 +15885,7 @@
 	patches.drivers/i40evf-0116-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
 	patches.drivers/i40evf-0117-i40evf-set-flags-before-sending-message.patch
 	patches.drivers/i40evf-0118-i40e-i40evf-add-ASQ-write-back-timeout-variable-to-A.patch
+	patches.drivers/i40evf-0119-i40e-i40evf-initialize-context-descriptor.patch
 
 	########################################################
 	# Wireless Networking
