--- a/series.conf
+++ b/series.conf
@@ -15898,6 +15898,7 @@
 	patches.drivers/i40evf-0129-i40e-i40evf-Add-nvmupdate-support.patch
 	patches.drivers/i40evf-0130-i40e-i40evf-fix-extension-header-csum-logic.patch
 	patches.drivers/i40evf-0131-i40evf-don-t-wait-so-long.patch
+	patches.drivers/i40evf-0132-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
 
 	########################################################
 	# Wireless Networking
