--- a/series.conf
+++ b/series.conf
@@ -15823,6 +15823,7 @@
 	patches.drivers/i40evf-0054-i40evf-support-ethtool-RSS-options.patch
 	patches.drivers/i40evf-0055-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
 	patches.drivers/i40evf-0056-i40evf-fix-panic-on-PF-driver-fail.patch
+	patches.drivers/i40evf-0057-i40evf-remove-debugging-message.patch
 
 	########################################################
 	# Wireless Networking
