--- a/series.conf
+++ b/series.conf
@@ -15793,6 +15793,7 @@
 	patches.drivers/i40evf-0024-i40evf-remove-bogus-comment.patch
 	patches.drivers/i40evf-0025-i40evf-don-t-guess-device-name.patch
 	patches.drivers/i40evf-0026-i40evf-store-ring-size-in-ring-structs.patch
+	patches.drivers/i40evf-0027-i40evf-update-version-and-copyright-date.patch
 
 	########################################################
 	# Wireless Networking
