i40e/i40evf: Clean up a few things (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15852,6 +15852,7 @@
 	patches.drivers/i40evf-0083-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
 	patches.drivers/i40evf-0084-i40e-i40evf-fix-rx-descriptor-status.patch
 	patches.drivers/i40evf-0085-i40e-i40evf-Fix-code-to-accommodate-i40e_register.h-.patch
+	patches.drivers/i40evf-0086-i40e-i40evf-Clean-up-a-few-things.patch
 
 	########################################################
 	# Wireless Networking
