i40evf: fix memory leak on unused interfaces (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15904,6 +15904,7 @@
 	patches.drivers/i40evf-0135-i40evf-future-proof-vfr_stat-state-check.patch
 	patches.drivers/i40evf-0136-i40evf-do-not-re-arm-watchdog-after-remove.patch
 	patches.drivers/i40evf-0137-i40evf-don-t-leak-queue-vectors.patch
+	patches.drivers/i40evf-0138-i40evf-fix-memory-leak-on-unused-interfaces.patch
 
 	########################################################
 	# Wireless Networking
