i40evf: set descriptor multiple to 32 (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15843,6 +15843,7 @@
 	patches.drivers/i40evf-0074-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
 	patches.drivers/i40evf-0075-i40evf-don-t-use-RESETTING-state-during-reinit.patch
 	patches.drivers/i40evf-0076-i40e-i40evf-remove-unused-RX_LRO-define.patch
+	patches.drivers/i40evf-0077-i40evf-set-descriptor-multiple-to-32.patch
 
 	########################################################
 	# Wireless Networking
