--- a/series.conf
+++ b/series.conf
@@ -15851,6 +15851,7 @@
 	patches.drivers/i40evf-0082-i40e-i40evf-check-AQ-register-for-valid-data.patch
 	patches.drivers/i40evf-0083-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
 	patches.drivers/i40evf-0084-i40e-i40evf-fix-rx-descriptor-status.patch
+	patches.drivers/i40evf-0085-i40e-i40evf-Fix-code-to-accommodate-i40e_register.h-.patch
 
 	########################################################
 	# Wireless Networking
