i40e/i40evf: fix extension header csum logic (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15896,6 +15896,7 @@
 	patches.drivers/i40evf-0127-i40evf-remove-unnecessary-break-after-goto.patch
 	patches.drivers/i40evf-0128-i40e-i40evf-Clean-up-code.patch
 	patches.drivers/i40evf-0129-i40e-i40evf-Add-nvmupdate-support.patch
+	patches.drivers/i40evf-0130-i40e-i40evf-fix-extension-header-csum-logic.patch
 
 	########################################################
 	# Wireless Networking
