i40evf: virtual channel interface (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15770,6 +15770,7 @@
 	patches.drivers/i40evf-0001-i40evf-main-driver-core.patch
 	patches.drivers/i40evf-0002-i40evf-transmit-and-receive-functionality.patch
 	patches.drivers/i40evf-0003-i40evf-core-ethtool-functionality.patch
+	patches.drivers/i40evf-0004-i40evf-virtual-channel-interface.patch
 
 	########################################################
 	# Wireless Networking
