--- a/series.conf
+++ b/series.conf
@@ -15798,6 +15798,7 @@
 	patches.drivers/i40evf-0029-i40e-Change-MSIX-to-MSI-X.patch
 	patches.drivers/i40evf-0030-i40evf-Enable-the-ndo_set_features-netdev-op.patch
 	patches.drivers/i40evf-0031-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
+	patches.drivers/i40evf-0032-i40e-i40evf-carefully-fill-tx-ring.patch
 
 	########################################################
 	# Wireless Networking
