--- a/series.conf
+++ b/series.conf
@@ -15847,6 +15847,7 @@
 	patches.drivers/i40evf-0078-i40evf-fix-crash-when-changing-ring-sizes.patch
 	patches.drivers/i40evf-0079-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
 	patches.drivers/i40evf-0080-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
+	patches.drivers/i40evf-0081-i40evf-make-messages-less-dire.patch
 
 	########################################################
 	# Wireless Networking
