--- a/series.conf
+++ b/series.conf
@@ -15899,6 +15899,7 @@
 	patches.drivers/i40evf-0130-i40e-i40evf-fix-extension-header-csum-logic.patch
 	patches.drivers/i40evf-0131-i40evf-don-t-wait-so-long.patch
 	patches.drivers/i40evf-0132-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
+	patches.drivers/i40evf-0133-i40e-always-print-aqtx-answer.patch
 
 	########################################################
 	# Wireless Networking
