i40evf: resend FW request if no response (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15880,6 +15880,7 @@
 	patches.drivers/i40evf-0111-i40evf-don-t-stop-watchdog-if-it-hasn-t-started.patch
 	patches.drivers/i40evf-0112-i40evf-return-more-useful-error-information.patch
 	patches.drivers/i40evf-0113-i40evf-fix-typo.patch
+	patches.drivers/i40evf-0114-i40evf-resend-FW-request-if-no-response.patch
 
 	########################################################
 	# Wireless Networking
