i40evf: fix multiple crashes on remove (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15787,6 +15787,7 @@
 	patches.drivers/i40evf-0018-net-i40evf-Remove-duplicate-include.patch
 	patches.drivers/i40evf-0019-i40evf-request-reset-on-tx-hang.patch
 	patches.drivers/i40evf-0020-i40evf-remove-VLAN-filters-on-close.patch
+	patches.drivers/i40evf-0021-i40evf-fix-multiple-crashes-on-remove.patch
 
 	########################################################
 	# Wireless Networking
