i40evf: use correct format for printing MAC addresses (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15856,6 +15856,7 @@
 	patches.drivers/i40evf-0087-i40evf-remove-unnecessary-log-messages.patch
 	patches.drivers/i40evf-0088-i40evf-remove-bogus-comment.patch
 	patches.drivers/i40evf-0089-i40evf-clean-up-log-message-formatting.patch
+	patches.drivers/i40evf-0090-i40evf-use-correct-format-for-printing-MAC-addresses.patch
 
 	########################################################
 	# Wireless Networking
