i40e/i40evf: Update RSS configuration (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15873,6 +15873,7 @@
 	patches.drivers/i40evf-0104-i40e-i40evf-i40e_register.h-update.patch
 	patches.drivers/i40evf-0105-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
 	patches.drivers/i40evf-0106-i40evf-fix-off-by-one.patch
+	patches.drivers/i40evf-0107-i40e-i40evf-Update-RSS-configuration.patch
 
 	########################################################
 	# Wireless Networking
