--- a/series.conf
+++ b/series.conf
@@ -15803,6 +15803,7 @@
 	patches.drivers/i40evf-0034-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
 	patches.drivers/i40evf-0035-i40e-i40evf-Use-dma_set_mask_and_coherent.patch
 	patches.drivers/i40evf-0036-i40evf-Rename-i40e_ptype_lookup-i40evf_ptype_lookup.patch
+	patches.drivers/i40evf-0037-i40evf-correctly-program-RSS-HLUT-table.patch
 
 	########################################################
 	# Wireless Networking
