i40e/i40evf: clear aq bah-bal on shutdown (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15882,6 +15882,7 @@
 	patches.drivers/i40evf-0113-i40evf-fix-typo.patch
 	patches.drivers/i40evf-0114-i40evf-resend-FW-request-if-no-response.patch
 	patches.drivers/i40evf-0115-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
+	patches.drivers/i40evf-0116-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
 
 	########################################################
 	# Wireless Networking
