i40evf: refactor reset handling (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15783,6 +15783,7 @@
 	patches.drivers/i40evf-0014-i40evf-fix-bogus-comment.patch
 	patches.drivers/i40evf-0015-i40evf-don-t-store-unnecessary-array-of-strings.patch
 	patches.drivers/i40evf-0016-i40evf-change-type-of-flags-variable.patch
+	patches.drivers/i40evf-0017-i40evf-refactor-reset-handling.patch
 
 	########################################################
 	# Wireless Networking
