i40e/i40evf: Remove reserved PCTYPE defines (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15838,6 +15838,7 @@
 	patches.drivers/i40evf-0069-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/i40evf-0070-i40evf-Use-is_multicast_ether_addr-helper.patch
 	patches.drivers/i40evf-0071-i40e-i40evf-Update-check-for-AQ-aliveness.patch
+	patches.drivers/i40evf-0072-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
 
 	########################################################
 	# Wireless Networking
