i40e: Change MSIX to MSI-X (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15795,6 +15795,7 @@
 	patches.drivers/i40evf-0026-i40evf-store-ring-size-in-ring-structs.patch
 	patches.drivers/i40evf-0027-i40evf-update-version-and-copyright-date.patch
 	patches.drivers/i40evf-0028-i40evf-remove-errant-space.patch
+	patches.drivers/i40evf-0029-i40e-Change-MSIX-to-MSI-X.patch
 
 	########################################################
 	# Wireless Networking
