i40e/i40evf: remove unused RX_LRO define (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15842,6 +15842,7 @@
 	patches.drivers/i40evf-0073-i40e-i40evf-remove-storm-control.patch
 	patches.drivers/i40evf-0074-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
 	patches.drivers/i40evf-0075-i40evf-don-t-use-RESETTING-state-during-reinit.patch
+	patches.drivers/i40evf-0076-i40e-i40evf-remove-unused-RX_LRO-define.patch
 
 	########################################################
 	# Wireless Networking
