--- a/series.conf
+++ b/series.conf
@@ -15811,6 +15811,7 @@
 	patches.drivers/i40evf-0042-i40evf-don-t-shut-down-admin-queue-on-error.patch
 	patches.drivers/i40evf-0043-i40evf-clean-up-init-error-messages.patch
 	patches.drivers/i40evf-0044-i40evf-fix-oops-in-watchdog-handler.patch
+	patches.drivers/i40evf-0045-i40evf-remove-double-space-after-return.patch
 
 	########################################################
 	# Wireless Networking
