--- a/series.conf
+++ b/series.conf
@@ -15841,6 +15841,7 @@
 	patches.drivers/i40evf-0072-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
 	patches.drivers/i40evf-0073-i40e-i40evf-remove-storm-control.patch
 	patches.drivers/i40evf-0074-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
+	patches.drivers/i40evf-0075-i40evf-don-t-use-RESETTING-state-during-reinit.patch
 
 	########################################################
 	# Wireless Networking
