i40evf: fix typo (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15879,6 +15879,7 @@
 	patches.drivers/i40evf-0110-i40e-i40evf-Big-endian-fixes-for-handling-HMC.patch
 	patches.drivers/i40evf-0111-i40evf-don-t-stop-watchdog-if-it-hasn-t-started.patch
 	patches.drivers/i40evf-0112-i40evf-return-more-useful-error-information.patch
+	patches.drivers/i40evf-0113-i40evf-fix-typo.patch
 
 	########################################################
 	# Wireless Networking
