i40e/i40evf: fix rx descriptor status (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15850,6 +15850,7 @@
 	patches.drivers/i40evf-0081-i40evf-make-messages-less-dire.patch
 	patches.drivers/i40evf-0082-i40e-i40evf-check-AQ-register-for-valid-data.patch
 	patches.drivers/i40evf-0083-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
+	patches.drivers/i40evf-0084-i40e-i40evf-fix-rx-descriptor-status.patch
 
 	########################################################
 	# Wireless Networking
