--- a/series.conf
+++ b/series.conf
@@ -15815,6 +15815,7 @@
 	patches.drivers/i40evf-0046-i40e-i40evf-Add-an-FD-message-level.patch
 	patches.drivers/i40evf-0047-i40e-i40evf-fix-error-checking-path.patch
 	patches.drivers/i40evf-0048-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
+	patches.drivers/i40evf-0049-i40evf-remove-open-coded-skb_cow_head.patch
 
 	########################################################
 	# Wireless Networking
