i40e/i40evf: Use dma_set_mask_and_coherent (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15801,6 +15801,7 @@
 	patches.drivers/i40evf-0032-i40e-i40evf-carefully-fill-tx-ring.patch
 	patches.drivers/i40evf-0033-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
 	patches.drivers/i40evf-0034-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
+	patches.drivers/i40evf-0035-i40e-i40evf-Use-dma_set_mask_and_coherent.patch
 
 	########################################################
 	# Wireless Networking
