--- a/series.conf
+++ b/series.conf
@@ -15780,6 +15780,7 @@
 	patches.drivers/i40evf-0011-i40e-spelling-error.patch
 	patches.drivers/i40evf-0012-i40evf-trivial-fixes.patch
 	patches.drivers/i40evf-0013-i40evf-clean-up-adapter-struct.patch
+	patches.drivers/i40evf-0014-i40evf-fix-bogus-comment.patch
 
 	########################################################
 	# Wireless Networking
