i40evf: A0 silicon specific (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15774,6 +15774,7 @@
 	patches.drivers/i40evf-0005-i40evf-driver-core-headers.patch
 	patches.drivers/i40evf-0006-i40evf-init-code-and-hardware-support.patch
 	patches.drivers/i40evf-0007-i40evf-add-driver-to-kernel-build-system.patch
+	patches.drivers/i40evf-0008-i40evf-A0-silicon-specific.patch
 
 	########################################################
 	# Wireless Networking
