i40e/i40evf: control auto ITR through ethtool (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15833,6 +15833,7 @@
 	patches.drivers/i40evf-0064-i40evf-don-t-lie-to-ethtool.patch
 	patches.drivers/i40evf-0065-i40evf-make-ethtool_ops-const.patch
 	patches.drivers/i40evf-0066-i40e-i40evf-set-proper-default-for-ITR-registers.patch
+	patches.drivers/i40evf-0067-i40e-i40evf-control-auto-ITR-through-ethtool.patch
 
 	########################################################
 	# Wireless Networking
