PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15906,6 +15906,7 @@
 	patches.drivers/i40evf-0137-i40evf-don-t-leak-queue-vectors.patch
 	patches.drivers/i40evf-0138-i40evf-fix-memory-leak-on-unused-interfaces.patch
 	patches.drivers/i40evf-0139-i40evf-Fixed-guest-OS-panic-when-removing-vf-driver.patch
+	patches.drivers/i40evf-0140-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
