i40e/i40evf: Force a shifted '1' to be unsigned (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15889,6 +15889,7 @@
 	patches.drivers/i40evf-0120-i40evf-change-branding-string.patch
 	patches.drivers/i40evf-0121-i40e-i40evf-Do-not-free-the-dummy-packet-buffer-sync.patch
 	patches.drivers/i40evf-0122-i40evf-don-t-violate-scope.patch
+	patches.drivers/i40evf-0123-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
 
 	########################################################
 	# Wireless Networking
