i40evf: clean up adapter struct (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15779,6 +15779,7 @@
 	patches.drivers/i40evf-0010-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
 	patches.drivers/i40evf-0011-i40e-spelling-error.patch
 	patches.drivers/i40evf-0012-i40evf-trivial-fixes.patch
+	patches.drivers/i40evf-0013-i40evf-clean-up-adapter-struct.patch
 
 	########################################################
 	# Wireless Networking
