i40evf: don't go further down (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15865,6 +15865,7 @@
 	patches.drivers/i40evf-0096-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
 	patches.drivers/i40evf-0097-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
 	patches.drivers/i40evf-0098-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
+	patches.drivers/i40evf-0099-i40evf-don-t-go-further-down.patch
 
 	########################################################
 	# Wireless Networking
