i40e/i40evf: Add nvmupdate support (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15895,6 +15895,7 @@
 	patches.drivers/i40evf-0126-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
 	patches.drivers/i40evf-0127-i40evf-remove-unnecessary-break-after-goto.patch
 	patches.drivers/i40evf-0128-i40e-i40evf-Clean-up-code.patch
+	patches.drivers/i40evf-0129-i40e-i40evf-Add-nvmupdate-support.patch
 
 	########################################################
 	# Wireless Networking
