i40evf: don't violate scope (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15888,6 +15888,7 @@
 	patches.drivers/i40evf-0119-i40e-i40evf-initialize-context-descriptor.patch
 	patches.drivers/i40evf-0120-i40evf-change-branding-string.patch
 	patches.drivers/i40evf-0121-i40e-i40evf-Do-not-free-the-dummy-packet-buffer-sync.patch
+	patches.drivers/i40evf-0122-i40evf-don-t-violate-scope.patch
 
 	########################################################
 	# Wireless Networking
