i40e/i40evf: update AdminQ API (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15819,6 +15819,7 @@
 	patches.drivers/i40evf-0050-i40evf-program-RSS-LUT-correctly.patch
 	patches.drivers/i40evf-0051-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
 	patches.drivers/i40evf-0052-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
+	patches.drivers/i40evf-0053-i40e-i40evf-update-AdminQ-API.patch
 
 	########################################################
 	# Wireless Networking
