--- a/series.conf
+++ b/series.conf
@@ -15886,6 +15886,7 @@
 	patches.drivers/i40evf-0117-i40evf-set-flags-before-sending-message.patch
 	patches.drivers/i40evf-0118-i40e-i40evf-add-ASQ-write-back-timeout-variable-to-A.patch
 	patches.drivers/i40evf-0119-i40e-i40evf-initialize-context-descriptor.patch
+	patches.drivers/i40evf-0120-i40evf-change-branding-string.patch
 
 	########################################################
 	# Wireless Networking
