--- a/series.conf
+++ b/series.conf
@@ -15909,6 +15909,7 @@
 	patches.drivers/i40evf-0140-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/i40evf-0141-i40evf-Fix-TSO-and-hw-checksums-for-non-accelerated-.patch
 	patches.drivers/i40evf-0142-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
+	patches.drivers/i40evf-0143-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
 
 	########################################################
 	# Wireless Networking
