i40evf: driver core headers (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15771,6 +15771,7 @@
 	patches.drivers/i40evf-0002-i40evf-transmit-and-receive-functionality.patch
 	patches.drivers/i40evf-0003-i40evf-core-ethtool-functionality.patch
 	patches.drivers/i40evf-0004-i40evf-virtual-channel-interface.patch
+	patches.drivers/i40evf-0005-i40evf-driver-core-headers.patch
 
 	########################################################
 	# Wireless Networking
