--- a/series.conf
+++ b/series.conf
@@ -15846,6 +15846,7 @@
 	patches.drivers/i40evf-0077-i40evf-set-descriptor-multiple-to-32.patch
 	patches.drivers/i40evf-0078-i40evf-fix-crash-when-changing-ring-sizes.patch
 	patches.drivers/i40evf-0079-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
+	patches.drivers/i40evf-0080-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
 
 	########################################################
 	# Wireless Networking
