i40evf: make ethtool_ops const (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15831,6 +15831,7 @@
 	patches.drivers/i40evf-0062-i40evf-Fix-the-headers-and-update-copyright-year.patch
 	patches.drivers/i40evf-0063-i40evf-Use-macro-param-for-ethtool-stats.patch
 	patches.drivers/i40evf-0064-i40evf-don-t-lie-to-ethtool.patch
+	patches.drivers/i40evf-0065-i40evf-make-ethtool_ops-const.patch
 
 	########################################################
 	# Wireless Networking
