i40evf: don't lie to ethtool (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15830,6 +15830,7 @@
 	patches.drivers/i40evf-0061-i40evf-Remove-unused-defines.patch
 	patches.drivers/i40evf-0062-i40evf-Fix-the-headers-and-update-copyright-year.patch
 	patches.drivers/i40evf-0063-i40evf-Use-macro-param-for-ethtool-stats.patch
+	patches.drivers/i40evf-0064-i40evf-don-t-lie-to-ethtool.patch
 
 	########################################################
 	# Wireless Networking
