--- a/series.conf
+++ b/series.conf
@@ -15834,6 +15834,7 @@
 	patches.drivers/i40evf-0065-i40evf-make-ethtool_ops-const.patch
 	patches.drivers/i40evf-0066-i40e-i40evf-set-proper-default-for-ITR-registers.patch
 	patches.drivers/i40evf-0067-i40e-i40evf-control-auto-ITR-through-ethtool.patch
+	patches.drivers/i40evf-0068-i40evf-Use-pci_enable_msix_range-instead-of-pci_enab.patch
 
 	########################################################
 	# Wireless Networking
