i40evf: init code and hardware support (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15772,6 +15772,7 @@
 	patches.drivers/i40evf-0003-i40evf-core-ethtool-functionality.patch
 	patches.drivers/i40evf-0004-i40evf-virtual-channel-interface.patch
 	patches.drivers/i40evf-0005-i40evf-driver-core-headers.patch
+	patches.drivers/i40evf-0006-i40evf-init-code-and-hardware-support.patch
 
 	########################################################
 	# Wireless Networking
