i40e/i40evf: Remove addressof casts to same type (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15814,6 +15814,7 @@
 	patches.drivers/i40evf-0045-i40evf-remove-double-space-after-return.patch
 	patches.drivers/i40evf-0046-i40e-i40evf-Add-an-FD-message-level.patch
 	patches.drivers/i40evf-0047-i40e-i40evf-fix-error-checking-path.patch
+	patches.drivers/i40evf-0048-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
 
 	########################################################
 	# Wireless Networking
