i40e/i40evf: Some flow director HW definition fixes (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15799,6 +15799,7 @@
 	patches.drivers/i40evf-0030-i40evf-Enable-the-ndo_set_features-netdev-op.patch
 	patches.drivers/i40evf-0031-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
 	patches.drivers/i40evf-0032-i40e-i40evf-carefully-fill-tx-ring.patch
+	patches.drivers/i40evf-0033-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
 
 	########################################################
 	# Wireless Networking
