--- a/series.conf
+++ b/series.conf
@@ -15839,6 +15839,7 @@
 	patches.drivers/i40evf-0070-i40evf-Use-is_multicast_ether_addr-helper.patch
 	patches.drivers/i40evf-0071-i40e-i40evf-Update-check-for-AQ-aliveness.patch
 	patches.drivers/i40evf-0072-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
+	patches.drivers/i40evf-0073-i40e-i40evf-remove-storm-control.patch
 
 	########################################################
 	# Wireless Networking
