--- a/series.conf
+++ b/series.conf
@@ -15792,6 +15792,7 @@
 	patches.drivers/i40evf-0023-i40evf-fix-up-strings-in-init-task.patch
 	patches.drivers/i40evf-0024-i40evf-remove-bogus-comment.patch
 	patches.drivers/i40evf-0025-i40evf-don-t-guess-device-name.patch
+	patches.drivers/i40evf-0026-i40evf-store-ring-size-in-ring-structs.patch
 
 	########################################################
 	# Wireless Networking
