i40evf: don't guess device name (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15791,6 +15791,7 @@
 	patches.drivers/i40evf-0022-i40evf-get-rid-of-pci_using_dac.patch
 	patches.drivers/i40evf-0023-i40evf-fix-up-strings-in-init-task.patch
 	patches.drivers/i40evf-0024-i40evf-remove-bogus-comment.patch
+	patches.drivers/i40evf-0025-i40evf-don-t-guess-device-name.patch
 
 	########################################################
 	# Wireless Networking
