--- a/series.conf
+++ b/series.conf
@@ -15797,6 +15797,7 @@
 	patches.drivers/i40evf-0028-i40evf-remove-errant-space.patch
 	patches.drivers/i40evf-0029-i40e-Change-MSIX-to-MSI-X.patch
 	patches.drivers/i40evf-0030-i40evf-Enable-the-ndo_set_features-netdev-op.patch
+	patches.drivers/i40evf-0031-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
