i40evf: program RSS LUT correctly (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15816,6 +15816,7 @@
 	patches.drivers/i40evf-0047-i40e-i40evf-fix-error-checking-path.patch
 	patches.drivers/i40evf-0048-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
 	patches.drivers/i40evf-0049-i40evf-remove-open-coded-skb_cow_head.patch
+	patches.drivers/i40evf-0050-i40evf-program-RSS-LUT-correctly.patch
 
 	########################################################
 	# Wireless Networking
