i40evf: do not re-arm watchdog after remove (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15902,6 +15902,7 @@
 	patches.drivers/i40evf-0133-i40e-always-print-aqtx-answer.patch
 	patches.drivers/i40evf-0134-i40evf-fix-scan-warning-on-sprintf.patch
 	patches.drivers/i40evf-0135-i40evf-future-proof-vfr_stat-state-check.patch
+	patches.drivers/i40evf-0136-i40evf-do-not-re-arm-watchdog-after-remove.patch
 
 	########################################################
 	# Wireless Networking
