i40e/i40evf: Change type to u32 to avoid sparse error (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15840,6 +15840,7 @@
 	patches.drivers/i40evf-0071-i40e-i40evf-Update-check-for-AQ-aliveness.patch
 	patches.drivers/i40evf-0072-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
 	patches.drivers/i40evf-0073-i40e-i40evf-remove-storm-control.patch
+	patches.drivers/i40evf-0074-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
 
 	########################################################
 	# Wireless Networking
