--- a/series.conf
+++ b/series.conf
@@ -15781,6 +15781,7 @@
 	patches.drivers/i40evf-0012-i40evf-trivial-fixes.patch
 	patches.drivers/i40evf-0013-i40evf-clean-up-adapter-struct.patch
 	patches.drivers/i40evf-0014-i40evf-fix-bogus-comment.patch
+	patches.drivers/i40evf-0015-i40evf-don-t-store-unnecessary-array-of-strings.patch
 
 	########################################################
 	# Wireless Networking
