i40evf: don't wait so long (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15897,6 +15897,7 @@
 	patches.drivers/i40evf-0128-i40e-i40evf-Clean-up-code.patch
 	patches.drivers/i40evf-0129-i40e-i40evf-Add-nvmupdate-support.patch
 	patches.drivers/i40evf-0130-i40e-i40evf-fix-extension-header-csum-logic.patch
+	patches.drivers/i40evf-0131-i40evf-don-t-wait-so-long.patch
 
 	########################################################
 	# Wireless Networking
