i40evf: Fix the headers and update copyright year (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15828,6 +15828,7 @@
 	patches.drivers/i40evf-0059-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/i40evf-0060-i40evf-Update-AdminQ-interface.patch
 	patches.drivers/i40evf-0061-i40evf-Remove-unused-defines.patch
+	patches.drivers/i40evf-0062-i40evf-Fix-the-headers-and-update-copyright-year.patch
 
 	########################################################
 	# Wireless Networking
