--- a/series.conf
+++ b/series.conf
@@ -15862,6 +15862,7 @@
 	patches.drivers/i40evf-0093-i40e-i40evf-fix-poll-weight.patch
 	patches.drivers/i40evf-0094-i40e-i40evf-remove-deprecated-device-IDs.patch
 	patches.drivers/i40evf-0095-i40evf-Fix-function-header.patch
+	patches.drivers/i40evf-0096-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
 
 	########################################################
 	# Wireless Networking
