--- a/series.conf
+++ b/series.conf
@@ -15796,6 +15796,7 @@
 	patches.drivers/i40evf-0027-i40evf-update-version-and-copyright-date.patch
 	patches.drivers/i40evf-0028-i40evf-remove-errant-space.patch
 	patches.drivers/i40evf-0029-i40e-Change-MSIX-to-MSI-X.patch
+	patches.drivers/i40evf-0030-i40evf-Enable-the-ndo_set_features-netdev-op.patch
 
 	########################################################
 	# Wireless Networking
