i40e/i40evf: Use correct number of VF vectors (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15800,6 +15800,7 @@
 	patches.drivers/i40evf-0031-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
 	patches.drivers/i40evf-0032-i40e-i40evf-carefully-fill-tx-ring.patch
 	patches.drivers/i40evf-0033-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
+	patches.drivers/i40evf-0034-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
 
 	########################################################
 	# Wireless Networking
