--- a/series.conf
+++ b/series.conf
@@ -15910,6 +15910,7 @@
 	patches.drivers/i40evf-0141-i40evf-Fix-TSO-and-hw-checksums-for-non-accelerated-.patch
 	patches.drivers/i40evf-0142-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
 	patches.drivers/i40evf-0143-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
+	patches.drivers/i40evf-0144-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 
 	########################################################
 	# Wireless Networking
