--- a/series.conf
+++ b/series.conf
@@ -15827,6 +15827,7 @@
 	patches.drivers/i40evf-0058-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
 	patches.drivers/i40evf-0059-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/i40evf-0060-i40evf-Update-AdminQ-interface.patch
+	patches.drivers/i40evf-0061-i40evf-Remove-unused-defines.patch
 
 	########################################################
 	# Wireless Networking
